Clean up l-p styles on mobile, issue #207

--- a/public/stylesheets/landing-page.css
+++ b/public/stylesheets/landing-page.css
@@ -80,6 +80,11 @@
     font-weight: 100;
 }
 
+#lp-tabs{
+  display: flex;
+  
+}
+
 /* default adjusted in media query min 992 */
 .columns-2{
     column-count: 1;
